[ADD] submodule prueba/scrummer

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = modoolar/scrummer
 	url = git@github.com:archimagogabo/pruebas.git
 	branch = master
+
+[submodule "prueba/scrummer"]
+	path = prueba/scrummer
+	url = git@github.com:modoolar/scrummer.git
+	branch = 11.0
